--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,11 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
+ <finalName>java-jenkins-docker</finalName>
+ </build>
+	<build>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
